Fix on panther location small screens

--- a/css/style.css
+++ b/css/style.css
@@ -398,7 +398,7 @@ h2 {
     .mascot>img {
         top: 30rem;
         height: 36%;
-        left: 9%;
+        left: 7%;
     }
 
     .section-stake {
